Updated pom.xml file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.password=0324
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+WEATHER_API=af490826bd781f8c6df4775c5164833f
+YOUTUBE_API=AIzaSyC3Q0K6kAG0qce-oA4DnCMtrth7fI1iuuc
+
+#dokku config:set savefortomorrow WEATHER_API=af490826bd781f8c6df4775c5164833f YOUTUBE_API=AIzaSyC3Q0K6kAG0qce-oA4DnCMtrth7fI1iuuc
